# gaspromTest

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  FILE_STRUCTURE.md  FINAL_SUMMARY.txt  INDEX.md  LOAD_TEST_RESULTS.md  PROJECT_COMPLETED.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_WINDOWS.sh  README.md  START_HERE.md  TECHNICAL_REQUIREMENTS.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  run_load_test.sh  start.sh  worker.py
app/: config.py  main.py
app/api/: routes.py
app/db/: database.py  models.py
app/models/: schemas.py
app/services/: data_service.py
app/tasks/: analytics.py  celery_app.py
docker/: Dockerfile
scripts/: QUICKSTART_WINDOWS.sh  celery_config.py  examples.py  init_db.py  run_load_test.sh  start.sh
tests/: locustfile.py
