[tool.poetry]
name = "device-data-service"
version = "0.1.0"
description = "Device data collection and analytics service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-multipart = "^0.0.6"
numpy = "^1.24"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
locust = "^2.17"
black = "^23.11"
flake8 = "^6.1"
mypy = "^1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
